GNOME Bugzilla – Bug 652566
Clutter-CRITICAL **: _clutter_stage_get_window: assertion `CLUTTER_IS_STAGE (stage)' failed
Last modified: 2011-06-14 16:01:49 UTC
Program received signal SIGTRAP, Trace/breakpoint trap. g_logv (log_domain=0x7ffff6b9d38d "Clutter", log_level=<optimized out>, format=0x7ffff41cdde2 "%s: assertion `%s' failed", args1=0x7fffffffda88) at gmessages.c:559 559 g_private_set (g_log_depth, GUINT_TO_POINTER (depth)); Missing separate debuginfos, use: debuginfo-install libXxf86vm-1.1.1-2.fc15.x86_64 libdrm-2.4.26-1.fc15.x86_64 libexif-0.6.20-1.fc15.x86_64 libjpeg-turbo-1.1.0-2.fc15.x86_64 libpciaccess-0.12.1-1.fc15.x86_64 libtiff-3.9.5-1.fc15.x86_64 mesa-dri-drivers-7.11-0.11.20110525.0.fc15.x86_64 mesa-libGL-7.11-0.11.20110525.0.fc15.x86_64 ncurses-libs-5.8-2.20110319.fc15.x86_64 (gdb) bt
+ Trace 227477
Note, does not happen with 1.6, just git master.
Created attachment 189910 [details] [review] glx: Ignore ensuring context on NULL stages
Created attachment 189911 [details] [review] backend: Do not call ensure_context() with NULL stage Always call ensure_context() if we have a valid Stage.
With those two patches, a new backtrace: Program received signal SIGSEGV, Segmentation fault. 0x00007ffff6699af7 in _cogl_framebuffer_set_viewport (framebuffer=0x0, x=0, y=0, width=640, height=480) at ./cogl-framebuffer.c:518 518 if (framebuffer->viewport_x == x && Missing separate debuginfos, use: debuginfo-install libXxf86vm-1.1.1-2.fc15.x86_64 libdrm-2.4.26-1.fc15.x86_64 libexif-0.6.20-1.fc15.x86_64 libjpeg-turbo-1.1.0-2.fc15.x86_64 libpciaccess-0.12.1-1.fc15.x86_64 libtiff-3.9.5-1.fc15.x86_64 mesa-dri-drivers-7.11-0.11.20110525.0.fc15.x86_64 mesa-libGL-7.11-0.11.20110525.0.fc15.x86_64 ncurses-libs-5.8-2.20110319.fc15.x86_64 (gdb) bt
+ Trace 227478
Created attachment 189916 [details] [review] stage: Ignore do_update() on unrealized stages An unrealized stage has no resources set yet, so we might as well skip it during the master clock spin.
With all three patches it works as before. Thanks!
Attachment 189910 [details] pushed as 0b20739 - glx: Ignore ensuring context on NULL stages Attachment 189911 [details] pushed as 81e9bf6 - backend: Do not call ensure_context() with NULL stage Attachment 189916 [details] pushed as 05bcd40 - stage: Ignore do_update() on unrealized stages