glx: Ignore ensuring context on NULL stages

https://bugzilla.gnome.org/show_bug.cgi?id=652566